[gd_scene load_steps=12 format=2]

[ext_resource path="res://units/sprites/snake.png" type="Texture" id=1]
[ext_resource path="res://units/Unit.gd" type="Script" id=2]
[ext_resource path="res://units/AttackIndicator.tscn" type="PackedScene" id=3]
[ext_resource path="res://types/sprites/earthen.png" type="Texture" id=4]
[ext_resource path="res://units/HealthIndicator.tscn" type="PackedScene" id=5]
[ext_resource path="res://resources/effects/circle.png" type="Texture" id=7]
[ext_resource path="res://resources/audio/punch1.ogg" type="AudioStream" id=8]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 30.359, 31.9626 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.45098, 0.941176, 0.701961, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.352941, 0.454902, 0.403922, 0.52549 )

[node name="Unit" type="Node2D"]
script = ExtResource( 2 )

[node name="CombineParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 150
one_shot = true
explosiveness = 0.6
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 250.0
initial_velocity_random = 0.2
scale_amount = 10.0

[node name="BuyParticles1" type="CPUParticles2D" parent="."]
emitting = false
one_shot = true

[node name="MoveParticles" type="CPUParticles2D" parent="."]
modulate = Color( 1, 1, 1, 0.709804 )
position = Vector2( 1.34146, -18.8311 )
amount = 9
lifetime = 0.15
local_coords = false
texture = ExtResource( 1 )
gravity = Vector2( 0, 0 )
scale_amount = 0.14
color_ramp = SubResource( 1 )

[node name="AttackIndicator" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 61.9144, 19.9986 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.314049, 7.0276 )
scale = Vector2( 0.142782, 0.142782 )
texture = ExtResource( 1 )
offset = Vector2( 5.6584, -185.095 )

[node name="PoisonParticles" type="CPUParticles2D" parent="."]
position = Vector2( 0.263969, 12.2275 )
scale = Vector2( 0.4, 0.4 )
emitting = false
amount = 40
one_shot = true
preprocess = 0.25
texture = ExtResource( 7 )
emission_shape = 2
emission_rect_extents = Vector2( 50, 50 )
direction = Vector2( 0, -1 )
gravity = Vector2( 0, -20 )
initial_velocity = 30.0
color = Color( 0.756863, 0.443137, 1, 1 )

[node name="PersistantPoisonParticles" type="CPUParticles2D" parent="."]
position = Vector2( 0.263969, 12.2275 )
scale = Vector2( 0.4, 0.4 )
emitting = false
amount = 10
lifetime = 1.5
preprocess = 0.25
texture = ExtResource( 7 )
emission_shape = 2
emission_rect_extents = Vector2( 50, 50 )
direction = Vector2( 0, -1 )
gravity = Vector2( 0, -20 )
initial_velocity = 30.0
color = Color( 0.756863, 0.443137, 1, 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="Type1" type="TextureRect" parent="."]
margin_left = -42.0
margin_top = 25.0
margin_right = 3.0
margin_bottom = 70.0
mouse_filter = 2
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="Type2" type="TextureRect" parent="."]
margin_left = -2.0
margin_top = 25.0
margin_right = 43.0
margin_bottom = 70.0
mouse_filter = 2
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="HealthIndicator" parent="." instance=ExtResource( 5 )]
position = Vector2( -53.4486, 22.0003 )

[node name="PowerPos" type="Position2D" parent="HealthIndicator"]
position = Vector2( 109.218, 0.778158 )

[node name="HealthBar2" type="ProgressBar" parent="HealthIndicator"]
visible = false
anchor_left = 0.236
anchor_right = 0.749
margin_left = -0.841444
margin_top = -0.172951
margin_right = 26.2816
margin_bottom = 15.827
rect_rotation = -90.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
allow_greater = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HitAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="StatChangeLabels" type="VBoxContainer" parent="."]
unique_name_in_owner = true
margin_left = -26.6031
margin_top = -155.225
margin_right = 29.3969
margin_bottom = -47.2252
mouse_filter = 2
custom_constants/separation = 22
alignment = 2

[node name="StatLabels" type="VBoxContainer" parent="."]
unique_name_in_owner = true
margin_left = -148.375
margin_top = -77.0798
margin_right = -87.3751
margin_bottom = 66.9202
rect_pivot_offset = Vector2( 60.9786, 72.5526 )
mouse_filter = 2
custom_constants/separation = 22
alignment = 1

[node name="Labels" type="Node2D" parent="."]
position = Vector2( -94.2944, -4.8657 )

[node name="BattlePowerPos" type="Position2D" parent="."]
position = Vector2( -83.0537, 14.8688 )

[node name="NormalPowerPos" type="Position2D" parent="."]
position = Vector2( 62.2158, 20.4015 )

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
